# ggj2016

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mk.sh
_RELEASE/data/: assets.json
include/: assets.hpp  base.hpp  battle.hpp  game.hpp
include/assets/: asset_loader.hpp  assets.hpp
include/base/: boilerplate.hpp  config.hpp  type_aliases.hpp
include/base/boilerplate/: app.hpp  app_runner.hpp
include/base/config/: dependencies.hpp  names.hpp
include/base/type_aliases/: common.hpp
include/battle/: battle.hpp  battle_menu.hpp  battle_participant.hpp  character_stats.hpp  stat.hpp  stat_buff.hpp  stat_effect.hpp  targeted_stat_effect.hpp  temp.hpp
include/game/: game_app.hpp
include/game/game_app/: game_app.hpp
src/: Dialoghi  main.cpp
